    full-only ,,NX (redistributed)'' tarball.
  * Update patch: 001_add-main-makefile.full+lite.patch, only build, install,
    clean etc. NX subprojects if the folder exists.
  * Package x2goagent is an ,,all'' package, not ,,any''.
  * Add folder /debian/patches-pending-evaluation with two newly discovered
    patches from git.etersoft.ru (AltLinux packaging repository for NX).

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, 16 Jan 2012 22:28:13 +0100

nx-libs (2:3.5.0.7-0) unstable; urgency=low

  * Drop patch: 011_nxcomp_sa-restorer.patch.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, 16 Jan 2012 11:28:14 +0100

nx-libs (2:3.5.0.6-0) unstable; urgency=low

  * Add patch: 202_nx-x11_enable-xinerama.patch.
  * Fix lintian issue: missing-separator-between-items for x2goagent package.
    Drop dependency on libnx-x11 as we already depend on nxagent and fix
    description synopsis of x2goagent package.
  * Add patch header/copyright to: 202_nx-x11_enable-xinerama.patch.
  * Silence lintian on debian-revision-should-not-be-zero. As this is no Debian
    packaging repository, but ,,NX (redistributed)'', we will always release
    with rev no. set to ,,0''.
  * Install libXinerama into libnx-x11 package. Header files into
    libnx-x11-dev.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 13 Jan 2012 13:21:41 +0100

nx-libs (2:3.5.0.5-0) unstable; urgency=low

  * Fix wrapper script patches for nxagent, x2goagent, nxauth, nxproxy.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 13 Jan 2012 00:37:21 +0100

nx-libs (2:3.5.0.4-0) unstable; urgency=low

  * Update/fix patch: 999_nxagent_unbrand-nxagent-brand-x2goagent.patch.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 12 Jan 2012 23:04:37 +0100

nx-libs (2:3.5.0.3-0) unstable; urgency=low

  * Rename nxagent-unbrand patch, so that is the last patch to be applied
    (999_<patchname>).
  * Drop NX agent unbrand patch from FreeNX.