@@ -7,6 +7,8 @@ nx-libs (2:3.5.0.8-0) UNRELEASED; urgency=low
   * Package x2goagent is an ,,all'' package, not ,,any''.
   * Add folder /debian/patches-pending-evaluation with two newly discovered
     patches from git.etersoft.ru (AltLinux packaging repository for NX).
+  * Fix patch: 109_nxagent_locale-utf8-compound-text.patch, fix crashes
+    reported from Stefan Baur. Thanks for reporting and testing!!!
 
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, 16 Jan 2012 22:28:13 +0100
 
